# mseed3

./: .gitignore  Cargo.toml  README.md
src/: data_encoding.rs  encoded_timeseries.rs  extra_headers.rs  fdsn_source_identifier.rs  header.rs  lib.rs  mseed3.rs  mseed_error.rs  record.rs  steim1.rs  steim_frame_block.rs
tests/: lib_example_test.rs  reference_read_test.rs
